# ros2-evaluation

./: .gitignore  LICENSE  README.md  ROS2_evaluation_research_thesis.docx
ros1_ws/src/offboard_test/: CMakeLists.txt  package.xml
ros1_ws/src/offboard_test/src/: add_three_ints_client.cpp  goal_pose_receiver.cpp  goal_pose_sender.cpp  offboard_server.cpp
ros1_ws/src/offboard_test/srv/: OffboardPose.srv
ros2_ws/src/offboard_test/: CMakeLists.txt  package.xml
src/message_interfaces/: CMakeLists.txt  package.xml
src/message_interfaces/msg/: VehiclePosition.msg
